@@ -12,6 +12,11 @@
 
 	<H3>New Features</H3>
 
+	<LI>HTMLDOC now supports heading levels 1 to 15.
+
+	<LI>HTMLDOC now allows the author to omit headings from
+	the TOC using the _HD_OMIT_TOC attribute.
+
 	<H3>Changes</H3>
 
 	<H3>Bug Fixes</H3>
